2009-07-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* audio.cpp: When we stop, we need to discard any audio data we might
	have stored.

2009-07-10  Sebastien Pouliot  <sebastien at ximian.com>

	* runtime.cpp|h, type-generated.cpp: Rename 
	SourceDownloadCompletedEvent to SourceDownloadCompleteEvent

2009-07-09  Jeffrey Stedfast  <fejj@novell.com>

	Fixes DRT #246

	* uri.cpp: Don't use a GData for params, instead use a custom
	linked-list. This makes it easier to compare param lists.
	(operator==): Compare params.

	* textbox.cpp (TextBoxBase::OnFocusOut): When we focus out, clear
	the selection.

2009-07-09  Jackson Harper  <jackson@ximian.com>

	* dependencyobject.cpp|h: Add a little more logic for setting
	things to NULL and consolidate in it's own function (STRING can
	now be set to NULL).

2009-07-09  Sebastien Pouliot  <sebastien at ximian.com>

	* downloader.cpp|h: Don't check redirection AFTER downloading the
	data. Expose CheckRedirectionPolicy so the plugin can check for
	the redirection policy when creating a new stream.
	* uri.cpp|h: Add IsAbsolute method and make the return value of
	IsScheme const.

2009-07-08  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* playlist.cpp: StopAsync: (PlaylistEntry): don't stop the MediaPlayer,
	the root takes care of that. (Playlist): loop over all children and
	call StopAsync on them, this way all nested playlists are reset properly
	(PlaylistRoot): when done stopping, reopen us.

2009-07-08  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* playlist.cpp: Skip UTF8 boms when checking if a file is a playlist.

2009-07-08  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp: If we don't AutoPlay, we end up Paused, not Stopped.

2009-07-08  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp: Don't go directly into a Buffering state, when
	MediaOpened is emitted we must be either in Paused or Playing state.

2009-07-08  Rolf Bjarne Kvinge  <RKvinge@novell.com>
